--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,31 +1,28 @@
 name: alice
 description: Alice is an HTTP Inspector tool which helps debugging http requests. It catches and stores http requests and responses, which can be viewed via simple UI.
-version: 0.1.5
+version: 1.1.1
 author: Jakub Homlala <jhomlala@gmail.com>
 homepage: https://github.com/jhomlala/alice
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
-  flutter: ">=1.12.0 <2.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+4
-  dio: ^3.0.9
-  flutter_local_notifications: ^1.4.4+4
-  rxdart: ^0.24.0
+  http: ^0.13.3
+  dio: ^4.0.0
+  overlay_support: 1.2.1
+  rxdart: ^0.27.1
 
-  path_provider: ^1.6.5
-  permission_handler: ^5.0.0+hotfix.3
-  package_info: ^0.4.0+16
-  open_file: ^3.0.1
-  shake: ^0.1.0
-  share: ^0.6.3+6
-  chopper: ^3.0.2
-  better_player: ^0.0.22
+  path_provider: ^2.0.2
+  permission_handler: ^8.1.4+2
+  package_info: ^2.0.2
+  share: ^2.0.4
+  chopper: ^4.0.1
 
 #Dummy classes
+  collection: ^1.15.0
 flutter:
   plugin:
     platforms:
