--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ author: Jakub Homlala <jhomlala@gmail.com>
 homepage: https://github.com/jhomlala/alice
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
   dio: ^4.0.0
-  overlay_support: 1.2.1
+  overlay_support: ^2.0.0
   rxdart: ^0.27.1
 
   path_provider: ^2.0.2
